# pointclouds-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  LICENSE-MIT  README.md  REPO_PROGRESS.md
.github/workflows/: bench.yml  ci.yml  wheels.yml
benches/: Cargo.toml  bench_filters.rs  bench_icp.rs  bench_kdtree.rs  bench_normals.rs  bench_voxel.rs
benches/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bbox.rs  cloud.rs  cloud_view.rs  lib.rs  point.rs  traits.rs
crates/filters/: Cargo.toml
crates/filters/src/: lib.rs  passthrough.rs  radius_outlier.rs  statistical_outlier.rs  voxel_downsample.rs
crates/io/: Cargo.toml
crates/io/src/: las.rs  lib.rs  pcd.rs  ply.rs
crates/normals/: Cargo.toml
crates/normals/src/: estimate.rs  lib.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/python/pointclouds_rs/: __init__.py
crates/python/src/: cloud.rs  filters.rs  io.rs  lib.rs  normals.rs  registration.rs  segmentation.rs
crates/registration/: Cargo.toml
crates/registration/src/: correspondence.rs  icp.rs  icp_plane.rs  lib.rs
crates/segmentation/: Cargo.toml
crates/segmentation/src/: euclidean_cluster.rs  lib.rs  ransac_plane.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: kdtree.rs  lib.rs  octree.rs  voxel_grid.rs
data/: bunny.pcd  plane_with_noise.pcd  two_scans.pcd
examples/: basic_filtering.rs  icp_registration.rs
examples/python/: aerial_lidar.py  benchmark_vs_open3d.py  kitti_obstacle_detection.py  quickstart.py
tests/: bench_vs_open3d.py  cluster_differential.rs  real_world_pipeline.rs  test_adversarial.rs  test_pipeline.rs  test_python.py  test_roundtrip_io.rs
