[package]
name = "pointclouds-filters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pointclouds-core = { path = "../core" }
pointclouds-spatial = { path = "../spatial" }
hashbrown.workspace = true

[dev-dependencies]
proptest.workspace = true
