[package]
name = "pointclouds-segmentation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pointclouds-core = { path = "../core" }
pointclouds-spatial = { path = "../spatial" }
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
